# test-sqlalchemy-version-1

./: .env.template  pyproject.toml
core/: config.py  constants.py
database/: mysqldb.py
src/: main.py
src/core/: config.py  constants.py  init.py
src/database/: mysqldb.py
src/model/: __init__.py  user.py
src/service/: user_service.py
