[tool.poetry]
name = "test-sqlalchemy-version-1"
version = "0.1.0"
description = ""
authors = ["oliver <lifefossil@outlook.com>"]
readme = "README.md"
packages = [{include = "test_sqlalchemy_version_1"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^1.4.46"
pytest = "^7.2.0"
alembic = "^1.9.1"
pydantic = "^1.10.4"
python-dotenv = "^0.21.0"
mysqlclient = "^2.1.1"
sqlalchemy2-stubs = "^0.0.2a31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
